# python-package-template

./: .dockerignore  .gitignore  .gitlab-ci.yml  .markdown-link-check.json  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  notebook.ipynb  objects.inv  package-lock.json  package.json  properdocs.yml  pyproject.toml
.github/: pull_request_template.md  release.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/cleanup-artifacts/: action.yml
.github/actions/gh-pages/: config.json
.github/actions/install-python-deps/: action.yml
.github/workflows/: ci.yml  dev-release.yml  main-release.yml  pre-commit.yaml  quality-and-tests.yml  test-deploy.yaml  uni_tests.yaml  unit_tests.yaml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
docker/: Dockerfile
docs/examples/: example.py  index.html
docs/examples/SUMMARY/: index.html
docs/examples/example/: index.html
makefiles/: build.mk  check_format.mk  common.mk  docker.mk  install.mk  run.mk  test.mk
package/SUMMARY/: index.html
package/python_package_template/example/: index.html
package/python_package_template/settings/: index.html
package/python_package_template/utils/: index.html
search/: search_index.json
src/python_package_template/: example.py  settings.py  utils.py
src/python_package_template.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_settings.py
